# AutoPinball

./: .gitignore  CMakeLists.txt  GUI.py  KeyboardFlippers.py  README.md  gamestate.py  package.xml  start_game.py  test_GUI.py  track_ball.py
Arduino/Input_Ouptut/: Input_Ouptut.ino
CAD_Models/Components/: 0.25 x 20 x 1.25 Five Arm Knob.SLDPRT  2.0 Elastic Band - Y-Lane.SLDPRT  2.00 Elastic Band - Slingshot.SLDPRT  2.00 Elastic Band Triangle R0.2.SLDASM  2.00 Elastic Band Triangle.SLDASM  2.25 Elastic Band - Y-Lane.SLDPRT  2.25 Elastic Band Triangle R0.2.SLDASM  2.25 Elastic Band Triangle.SLDASM  2.50 Elastic Band - Triangle.SLDPRT  3.00 Elastic Band Triangle.SLDASM  Bumper Solenoid.SLDPRT  Button.SLDDRW  Button.SLDPRT  Flipper.SLDPRT  LED Mount.SLDPRT  LED Orange Assembly.SLDASM  LED Orange.SLDPRT  LED Red Assembly.SLDASM  LED Red.SLDPRT  LED Yellow Assembly.SLDASM  LED Yellow.SLDPRT  Leaf Switch.SLDPRT  Left Flipper Assembly.SLDASM  Left Flipper Solenoid Mount.SLDPRT  Left Y-Lane Divider - 2.0.SLDASM  Left Y-Lane Divider.SLDASM  Microswitch Bracket.SLDPRT  Microswitch.SLDPRT  Mirror2.00 Elastic Band - Slingshot.SLDPRT  Mirror2.00 Elastic Band Triangle R0.2.SLDASM  MirrorSlingshot Solenoid.SLDPRT  MirrorStar Post - Clear.SLDPRT  Pal Nut.SLDPRT  Playfield Insert - Orange Triangular.SLDPRT  Playfield Insert - Red Triangular.SLDPRT  Playfield Insert - Yellow Circular.SLDPRT  Plinko Dropper Assembly.SLDASM  Plinko Tube Mount Assembly.SLDASM  Pop Bumper Assembly R0.2.SLDASM  Pop Bumper Assembly.SLDASM  (+9 more)
CAD_Models/Components/3D Prints/: 2.00 Acrylic Tube Adapter - 23.0deg.SLDPRT  2.00 Acrylic Tube Adapter - 76.2deg.SLDPRT  Camera Mount.SLDPRT  Joint 1 Mount.SLDPRT  Joint 2 Mount R0.2.SLDPRT  Joint 2 Mount.SLDPRT  Level 2 Joint 1 Support Geometry Extension.SLDBLK  Level 2 Joint 1 Support Geometry.SLDBLK  Level 2 Joint 2 Support Geometry.SLDBLK  Playfield Ramp.SLDPRT  (+12 more)
CAD_Models/Play Field/: AutoPinball Playfield R0.1.SLDASM  Back Panel.SLDPRT  Back Skirt Panel.SLDPRT  Base Layer 6deg Gradient.SLDPRT  Base Layer R0.2.SLDPRT  Base Layer.SLDPRT  Front Panel.SLDPRT  Left Panel.SLDPRT  Right Panel.SLDPRT  Standard Pinball.SLDPRT
Classes/: flipper.py  light.py  playfield.py  switch.py
Low_Level/: run_low_level.py
States/: StateMachine.py  idle.py  normal_play.py
Track/: get_color.py  get_hsv_color.py  get_mouse_position.py  track_ball.py  track_hsv.py  track_metal.py
launch/: automatic_pinball.launch  automatic_pinball_c.launch  automatic_pinball_py.launch  manual_pinball.launch  manual_pinball_keyboard.launch
src/Classes/: light.py  playfield.py
src/GUI/: gui.py
src/Low_Level/: run_low_level.py
src/Manual/: KeyboardFlippers.py
src/States/: idle.py  normal_play.py
src/Track/: get_color.py  get_hsv_color.py  get_mouse_position.py  track_ball.py  track_hsv.py  track_metal.cpp  track_metal.py
(+283 files in other folders)
